feat: Adding new file contact page

--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
              </ul>
          </nav>
      </header>
+
+     <!-- section About -->
+
+     <section>
+        <h1>About Us</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum quasi ullam quae asperiores, est ut, quos, unde rerum totam eaque voluptatibus impedit eligendi odio obcaecati dolores. Quos voluptas eveniet tempore!</p>
+     </section>
 </body>
 </html>
